# ray_app

./: .env.example  .gitignore  README.md  pyproject.toml
app/: conftest.py
app/bookmarks/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
app/bookmarks/migrations/: 0001_initial.py
app/bookmarks/tests/: factories.py  fixtures.py  test_bookmarks.py
app/core/: models.py  settings.py  urls.py
app/users/: models.py  serializers.py  services.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: factories.py  fixtures.py  test_users.py
